--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "workspace-root",
   "version": "1.3.4",
   "private": true,
-  "description": "Workspace root for embroider-toolbox",
+  "description": "Workspace root for create-v2-addon-repo",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ijlee2/embroider-toolbox.git"
+    "url": "https://github.com/ijlee2/create-v2-addon-repo.git"
   },
   "license": "MIT",
   "author": "Isaac J. Lee",
