--- a/packages/blueprints-v2-addon/package.json
+++ b/packages/blueprints-v2-addon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blueprints-v2-addon",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "private": true,
   "description": "Blueprints for v2 addons",
   "keywords": [
@@ -24,7 +24,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "./build.sh --production",
+    "build": "sh build.sh --production",
     "format": "prettier . --cache --write",
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\" && pnpm format",
@@ -32,7 +32,7 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "lint:types": "tsc --noEmit",
-    "test": "./build.sh --test && mt dist-for-testing --quiet",
+    "test": "sh build.sh --test && mt dist-for-testing --quiet",
     "update-blueprints": "./update-blueprints.mjs",
     "update-test-fixtures": "./update-test-fixtures.sh"
   },
