--- a/packages/create-v2-addon-repo/package.json
+++ b/packages/create-v2-addon-repo/package.json
@@ -23,7 +23,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "./build.sh --production",
+    "build": "sh build.sh --production",
     "format": "prettier . --cache --write",
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\" && pnpm format",
@@ -31,7 +31,7 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "lint:types": "tsc --noEmit",
-    "test": "./build.sh --test && mt dist-for-testing --quiet"
+    "test": "sh build.sh --test && mt dist-for-testing --quiet"
   },
   "dependencies": {
     "@codemod-utils/blueprints": "^2.1.0",
