--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
@@ -23,7 +23,7 @@
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "prelint:types": "type-css-modules --src app",
-    "lint:types": "glint",
+    "lint:types": "ember-tsc --noEmit",
     "start": "ember serve",
     "test": "ember test --test-port 0"
   },
@@ -39,10 +39,9 @@
     "@embroider/webpack": "^4.1.2",
     "@glimmer/component": "^2.0.0",
     "@glimmer/tracking": "^1.1.2",
-    "@glint/core": "^1.5.2",
-    "@glint/environment-ember-loose": "^1.5.2",
-    "@glint/environment-ember-template-imports": "^1.5.2",
-    "@glint/template": "^1.5.2",
+    "@glint/ember-tsc": "^1.0.8",
+    "@glint/template": "^1.7.3",
+    "@glint/tsserver-plugin": "^2.0.8",
     "@shared-configs/ember-template-lint": "workspace:*",
     "@shared-configs/eslint-config-ember": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
