--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
@@ -34,6 +34,7 @@
     "@ember/test-helpers": "^5.4.1",
     "@embroider/broccoli-side-watch": "^1.1.0",
     "@embroider/compat": "^3.9.3",
+    "@embroider/config-meta-loader": "^1.0.0",
     "@embroider/core": "^3.5.9",
     "@embroider/router": "^2.1.12",
     "@embroider/webpack": "^4.1.2",
