--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/package.json
@@ -6,12 +6,16 @@
   "repository": "",
   "license": "MIT",
   "author": "",
+  "exports": {
+    "./tests/*": "./tests/*",
+    "./*": "./app/*"
+  },
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
   "scripts": {
-    "build": "ember build --environment=production",
+    "build": "vite build",
     "format": "prettier . --cache --write",
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:css": "stylelint \"**/*.css\" --allow-empty-input --cache",
@@ -24,25 +28,28 @@
     "lint:js:fix": "eslint . --fix",
     "prelint:types": "type-css-modules --src app",
     "lint:types": "ember-tsc --noEmit",
-    "start": "ember serve",
-    "test": "ember test --test-port 0"
+    "start": "vite",
+    "test": "vite build --mode development && ember test --path dist --test-port 0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.5",
+    "@babel/plugin-transform-runtime": "^7.28.5",
+    "@babel/plugin-transform-typescript": "^7.28.5",
     "@ember/optional-features": "^2.3.0",
     "@ember/string": "^4.0.1",
     "@ember/test-helpers": "^5.4.1",
-    "@embroider/broccoli-side-watch": "^1.1.0",
-    "@embroider/compat": "^3.9.3",
+    "@embroider/compat": "^4.1.11",
     "@embroider/config-meta-loader": "^1.0.0",
-    "@embroider/core": "^3.5.9",
-    "@embroider/router": "^2.1.12",
-    "@embroider/webpack": "^4.1.2",
+    "@embroider/core": "^4.4.0",
+    "@embroider/macros": "^1.19.5",
+    "@embroider/router": "^3.0.6",
+    "@embroider/vite": "^1.4.4",
     "@glimmer/component": "^2.0.0",
     "@glimmer/tracking": "^1.1.2",
     "@glint/ember-tsc": "^1.0.8",
     "@glint/template": "^1.7.3",
     "@glint/tsserver-plugin": "^2.0.8",
+    "@rollup/plugin-babel": "^6.1.0",
     "@shared-configs/ember-template-lint": "workspace:*",
     "@shared-configs/eslint-config-ember": "workspace:*",
     "@shared-configs/prettier": "workspace:*",
@@ -50,32 +57,25 @@
     "@shared-configs/typescript": "workspace:*",
     "@types/qunit": "^2.19.13",
     "autoprefixer": "^10.4.22",
-    "broccoli-asset-rev": "^3.0.0",
+    "babel-plugin-ember-template-compilation": "^3.0.1",
     "concurrently": "^9.2.1",
+    "decorator-transforms": "^2.3.0",
     "ember-a11y-testing": "^7.1.3",
     "ember-auto-import": "^2.12.0",
     "ember-cli": "~6.8.1",
-    "ember-cli-app-version": "^7.0.0",
     "ember-cli-babel": "^8.2.0",
-    "ember-cli-clean-css": "^3.0.0",
-    "ember-cli-dependency-checker": "^3.3.3",
     "ember-cli-htmlbars": "^7.0.0",
-    "ember-cli-inject-live-reload": "^2.1.0",
-    "ember-cli-sri": "^2.1.1",
-    "ember-cli-terser": "^4.0.2",
     "ember-load-initializers": "^3.0.1",
     "ember-modifier": "^4.2.2",
     "ember-page-title": "^9.0.3",
     "ember-qunit": "^9.0.4",
     "ember-resolver": "^13.1.1",
     "ember-source": "~6.8.2",
-    "ember-template-imports": "^4.3.0",
     "ember-template-lint": "^7.9.3",
     "ember-test-selectors": "^7.1.0",
     "embroider-css-modules": "^3.1.3",
     "eslint": "^9.39.1",
     "latest-version": "^9.0.0",
-    "loader.js": "^4.7.0",
     "postcss": "^8.5.6",
     "postcss-loader": "^8.2.0",
     "prettier": "^3.7.4",
@@ -85,12 +85,16 @@
     "tracked-built-ins": "^4.0.0",
     "type-css-modules": "^2.1.0",
     "typescript": "^5.9.3",
-    "webpack": "^5.103.0"
+    "vite": "^7.2.7"
   },
   "engines": {
     "node": "20.* || >= 22"
   },
   "ember": {
     "edition": "octane"
+  },
+  "ember-addon": {
+    "type": "app",
+    "version": 2
   }
 }
