--- a/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
+++ b/packages/create-v2-addon-repo/src/blueprints/docs-app/tsconfig.json
@@ -7,7 +7,12 @@
       "docs-app/*": ["app/*"],
       "*": ["types/*"]
     },
-    "types": ["ember-source/types", "@glint/ember-tsc/types"]
+    "types": [
+      "ember-source/types",
+      "@embroider/core/virtual",
+      "@glint/ember-tsc/types",
+      "vite/client"
+    ]
   },
   "include": ["app/**/*", "tests/**/*", "types/**/*"]
 }
