--- a/packages/create-v2-addon-repo/package.json
+++ b/packages/create-v2-addon-repo/package.json
@@ -9,7 +9,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ijlee2/create-v2-addon-repo.git"
+    "url": "https://github.com/ijlee2/create-v2-addon-repo.git",
+    "directory": "packages/create-v2-addon-repo"
   },
   "license": "MIT",
   "author": "Isaac J. Lee",
